src/test/ui/parser/issue-32501.stderr
error: expected identifier, found reserved identifier `_`
  --> $DIR/issue-32501.rs:7:13
   |
LL |     let mut _ = 0;
   |             ^ expected identifier, found reserved identifier

error: aborting due to previous error

